Regression: Cycles: Light group does not work #108342

Closed
opened 2023-05-27 07:39:11 +02:00 by Sun Kim · 0 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25 21:00, hash: e98c26decea6
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-23 05:51, hash: 9a8fd2f1ddb4

Broken since the first daily build with light link.

Short description of error
Light group pass renders nothing (just black).

LightGroupBroken.png

Exact steps for others to reproduce the error

  1. Add a light group from view layer properties, and assign the group to a light.
  2. Render.
  3. See the light group pass via render window or compositor.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25 21:00, hash: `e98c26decea6` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-23 05:51, hash: `9a8fd2f1ddb4` Broken since the first daily build with light link. **Short description of error** Light group pass renders nothing (just black). ![LightGroupBroken.png](/attachments/692abb72-3bf4-4330-b8cf-f8285848ae80) **Exact steps for others to reproduce the error** 1. Add a light group from view layer properties, and assign the group to a light. 2. Render. 3. See the light group pass via render window or compositor.
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-27 07:39:12 +02:00
Iliya Katushenock added the
Interest
Render & Cycles
label 2023-05-27 11:16:58 +02:00
Iliya Katushenock changed title from Cycles: light group does not work to Regression: Cycles: Light group does not work 2023-05-27 11:17:29 +02:00
Sergey Sharybin self-assigned this 2023-05-30 12:42:51 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-30 14:23:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108342
No description provided.